// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListInline component should render correctly with children 1`] = `
<ul
  className="sc-iCfLBT hEHWZG"
>
  <li
    className="sc-furvIG darQOM"
  >
    <div>
      This
    </div>
  </li>
  <li
    className="sc-furvIG darQOM"
  >
    <div>
      is
    </div>
  </li>
  <li
    className="sc-furvIG darQOM"
  >
    <div>
      an
    </div>
  </li>
  <li
    className="sc-furvIG darQOM"
  >
    <div>
      example
    </div>
  </li>
</ul>
`;

exports[`ListInline component should render correctly without children 1`] = `
<ul
  className="sc-iCfLBT hEHWZG"
/>
`;

exports[`ListInline component should render with custom padding 1`] = `
<ul
  className="sc-iCfLBT hEHWZG"
>
  <li
    className="sc-furvIG darQOM"
  >
    <div>
      This
    </div>
  </li>
  <li
    className="sc-furvIG darQOM"
  >
    <div>
      is
    </div>
  </li>
  <li
    className="sc-furvIG darQOM"
  >
    <div>
      fun
    </div>
  </li>
</ul>
`;
